# slint-app

./: .config  .gitignore  Cargo.toml  README.md  build.rs
src/: main.rs
ui/: appwindow.slint
ui/components/: Button.slint
