[package]
name = "slint-app"
version = "0.1.0"
authors = ["pablomikel <pablo.olavarr@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = {version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
